res/examples/invalid/reassign_const_value_2.eg
const a: number = 123;
a = 456;

// out: SyntaxError: `a` is a const value and can't be reassigned